; ModuleID = '/home/carl/AnghaBench/mpv/audio/out/extr_ao.c_ao_uninit.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/out/extr_ao.c_ao_uninit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ao = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.ao*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ao_uninit(%struct.ao* %0) #0 {
  %2 = alloca %struct.ao*, align 8
  store %struct.ao* %0, %struct.ao** %2, align 8
  %3 = load %struct.ao*, %struct.ao** %2, align 8
  %4 = icmp ne %struct.ao* %3, null
  br i1 %4, label %5, label %13

5:                                                ; preds = %1
  %6 = load %struct.ao*, %struct.ao** %2, align 8
  %7 = getelementptr inbounds %struct.ao, %struct.ao* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32 (%struct.ao*)*, i32 (%struct.ao*)** %9, align 8
  %11 = load %struct.ao*, %struct.ao** %2, align 8
  %12 = call i32 %10(%struct.ao* %11)
  br label %13

13:                                               ; preds = %5, %1
  %14 = load %struct.ao*, %struct.ao** %2, align 8
  %15 = call i32 @talloc_free(%struct.ao* %14)
  ret void
}

declare dso_local i32 @talloc_free(%struct.ao*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
